<resources>
    <string name="app_name">Directorio Nacional AA</string>
    <string name="tab_text_1">POR DIRECCIÓN</string>
    <string name="tab_text_2">POR ÁREA</string>
    <string name="tab_text_3">¿QUÉ ES AA?</string>
    <string name="action_settings">Configuración</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="com.crashlytics.useFirebaseAppId">true</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ONBOARDING -->
    <string name="onboarding_txtPage1_1">Bienvenido!</string>
    <string name="onboarding_txtPage1_2">Directorio Nacional de Alcohólicos Anónimos, Sección México</string>
    <string name="onboarding_txtPage2_1">Busca el Grupo</string>
    <string name="onboarding_txtPage2_2">Mas cercano a tu Comunidad</string>
    <string name="onboarding_txtPage3_1">¿Tienes problemas con tu manera de beber?</string>
    <string name="onboarding_txtPage3_2">Ponte en contacto con nosotros al teléfono: 5705 5802</string>
    <string name="onboarding_txtSkip">Saltar</string>
    <string name="onboarding_txtNext">Siguiente</string>
    <string name="onboarding_txtFinish"></string>
    <!-- FIN ONBOARDING -->

    <!-- FRAGMENTS MAIN -->
    <string name="fragment_main_txtDescCP">Realiza tu busqueda por Código Postal:</string>
    <string name="fragment_main_txtCP">Codigo Postal</string>
    <string name="fragment_main_txtDescEstado">O selecciona el Estado, Municipio y Colonia:</string>
    <string name="fragment_main_txtEstado">Estado</string>
    <string name="fragment_main_txtMunicipio">Municipio</string>
    <string name="fragment_main_txtColonia">Colonia</string>
    <string name="fragment_main_txtSearch">Buscar</string>
    <string name="fragment_main_txtDescArea">Ingresa la información para realizar tu busqueda:</string>
    <string name="fragment_main_txtArea">Area</string>
    <string name="fragment_main_txtDistrito">Distrito</string>

    <!--<string name="fragment_main_txtNoSearchState">No se encontraron estados</string>
    <string name="fragment_main_txtDistrito">Intente más tarde</string>
    <string name="fragment_main_txtDistrito">No se encontraron municipios</string>
    <string name="fragment_main_txtDistrito">Seleccionar</string>
    <string name="fragment_main_txtDistrito">No se encontraron colonias</string>
    <string name="fragment_main_txtDistrito">Error de estado</string>
    <string name="fragment_main_txtDistrito">Distrito</string>
    <string name="fragment_main_txtDistrito">Distrito</string>
    <string name="fragment_main_txtDistrito">Distrito</string>-->
    <!-- FIN FRAGMENTS MAIN -->

    <!-- GRUPO -->
    <string name="grupo_txtNombreGrupo">Nombre del Grupo</string>
    <string name="grupo_txtAdrress">Dirección</string>
    <string name="grupo_txtStreet">Calle</string>
    <string name="grupo_txtNumber">Numero Exterior</string>
    <string name="grupo_txtSuburn">Colonia</string>
    <string name="grupo_txtTown">Municipio</string>
    <string name="grupo_txtState">Estado</string>
    <string name="grupo_txtReference">Referencia</string>
    <string name="grupo_txtInformation">Información</string>
    <string name="grupo_txtArea">Área</string>
    <string name="grupo_txtDistrito">Distrito</string>
    <string name="grupo_txtStartDate">Fecha de Inicio</string>
    <string name="grupo_txtHoursSession">Horarios de sesión</string>
    <string name="grupo_txtMonday">Lunes</string>
    <string name="grupo_txtTuesday">Martes</string>
    <string name="grupo_txtWednesday">Miércoles</string>
    <string name="grupo_txtThursday">Jueves</string>
    <string name="grupo_txtFriday">Viernes</string>
    <string name="grupo_txtSaturday">Sabado</string>
    <string name="grupo_txtSunday">Domingo</string>
    <string name="grupo_txterrorService">Error en el servicio</string>
    <!-- FIN GRUPO -->

    <!-- LIST GRUPO -->
    <string name="listGrupo_txtColonia">Colonia: </string>
    <string name="listGrupo_txtMunicipio">Municipio: </string>
    <string name="title_activity_grupo_scrolling">Grupo</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- FIN LIST GRUPO -->
</resources>
