<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DireccionFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin15"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_txtDescCP"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txtNormal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtCodigoPostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/txtNormal"
                    android:inputType="number"
                    android:hint="" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_txtDescEstado"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txtNormal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:textSize="@dimen/txtNormal"
                    android:hint="@string/fragment_main_txtEstado" />

                <EditText
                    android:id="@+id/edtMunicipio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:textSize="@dimen/txtNormal"
                    android:hint="@string/fragment_main_txtMunicipio" />

                <EditText
                    android:id="@+id/edtColonia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:textSize="@dimen/txtNormal"
                    android:hint="@string/fragment_main_txtColonia" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_gravity="bottom">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:id="@+id/btnSearhDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/fragment_main_txtSearch" />

    </LinearLayout>

</FrameLayout>